<resources>
    <string name="app_name">SecureKeep</string>
    <string name="anti_theft_alarm_app">Anti Theft Alarm App</string>
    <string name="anti_theft_alarm">Anti Theft Alarm</string>
    <string name="wifi_detection">Wifi Detection</string>
    <string name="earphones_detections">Earphones Detections</string>
    <string name="don_t_touch_my_phone">Don\'t Touch My Phone</string>
    <string name="intruder_alert">Intruder Alert</string>
    <string name="charging_detection">Charging Detection</string>
    <string name="anti_pocket_detection">Anti Pocket Detection</string>
    <string name="open">open\n</string>
    <string name="close">close</string>
    <string name="settings">\nsettings</string>
    <string name="securekeep">SecureKeep</string>
    <string name="capture_intruder_s_photo_upon_unathorize_unclock_attempt">Capture Intruder\'s photo upon unathorize unclock attempt</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back">back</string>
    <string name="avoid_over_charge">Avoid over Charge</string>
    <string name="flash">flash</string>
    <string name="switchbtn">switchBtn</string>
    <string name="flash_light">Flash Light</string>
    <string name="on_flash_while_ringing">on flash while ringing</string>
    <string name="vibrate">vibrate</string>
    <string name="vibrate_while_ringing">vibrate while ringing</string>
    <string name="ringtone_1">ringtone 1</string>
    <string name="bulgur_alarm">bulgur alarm</string>
    <string name="enter_master_pin">Enter Master Pin</string>
    <string name="tap_to_activate">Tap to Activate</string>
    <string name="for_best_results_always_turn_on_vibration_when_you_are_in_crowded_areas_and_also_turn_on_flash_at_night">For best results always turn on vibration when you are in crowded areas and also turn on flash at night</string>
    <string name="pin_attempt_setting">Pin Attempt Setting</string>
    <string name="auto_photo_on_the_count_of_attempts">Auto-photo on the count of attempts</string>
    <string name="wrong_pin_attempts">Wrong pin attempts</string>
    <string name="none">None</string>
    <string name="view_all">View all</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="adjust_sound">Adjust Sound</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="settings2">Settings</string>
    <string name="motion_alarm_sensitivity">Motion Alarm Sensitivity</string>
    <string name="adjust_senstivity_for_motion_detection">Adjust sensitivity for motion detection</string>
    <string name="adjust_sensitivity_for_motion_detection">Adjust sensitivity for motion detection</string>
    <string name="set_alarm_tone">Set Alarm Tone</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="please_connect_charger">Please Connect Charger</string>
    <string name="please_connect_earphones">Please Connect Earphones</string>
    <string name="_2024_08_03_09_46_pm">2024/08/03 09:46 PM</string>
    <string name="tap_to_deactivate">Tap to Deactivate</string>
    <string name="tone_1">Tone 1</string>
    <string name="tone_2">Tone 2</string>
    <string name="tone_3">Tone 3</string>
    <string name="tone_4">Tone 4</string>
    <string name="tone_5">Tone 5</string>
    <string name="tone_name">Tone Name</string>
    <string name="system_tones">System Tones</string>
    <string name="create_4_digit_pin">Create 4 Digit Pin</string>
    <string name="change_pin_code">Change Pin Code</string>
    <string name="staric">****</string>
    <string name="current_pin_code">Current Pin Code</string>
</resources>