<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPinActivity"
    android:background="#C81B1B">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_pin"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock" />

    <LinearLayout
        android:id="@+id/pin_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <View
            android:id="@+id/pin_dot_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/pin_dot_background" />

        <View
            android:id="@+id/pin_dot_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/pin_dot_background" />

        <View
            android:id="@+id/pin_dot_3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/pin_dot_background" />

        <View
            android:id="@+id/pin_dot_4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/pin_dot_background" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_dots">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_1"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_2"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_3"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btn_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_4"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_5"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_6"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_7"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_8"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_9"
            android:backgroundTint="@color/white"/>


        <Button
            android:id="@+id/btn_0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/_0"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/clearBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/clear"
            app:tint="@color/white"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>