<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChargeDetectActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/activityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/charging_detection"
            android:gravity="center"
            android:layout_weight="3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settingBtnBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/setting"
            app:tint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>